# Athena

./: Cerberus Internal Exploratory.aux  Cerberus Internal Exploratory.tex  README.md
athena/: Cargo.toml  README.md
athena/src/: lib.rs
athena/src/zero_lib/: mod.rs
athena/src/zero_lib/common_reference/: range_comparator.zk
athena/src/zero_orb/: mod.rs
attributes_testing/: Cargo.toml  README.md
attributes_testing/src/: main.rs  statement.zk
attributes_testing/src/client/: mod.rs
attributes_testing/src/common_reference/: 8bit_comparator.zk  QAP.json  SigmaG1.json  SigmaG2.json  mod.rs  statement_range.zk
groth_snarks/: Cargo.toml
paper/: Cerberus Internal Exploratory.tex
