[package]
name = "comparator_playground"
version = "0.1.0"
authors = ["JoshFourie <42534669+JoshFourie@users.noreply.github.com>"]
edition = "2018"

[dependencies]
zksnark = { git = "https://github.com/JoshFourie/zksnark-rs.git"}
tiny-keccak = "1.0"
itertools = "0.6.0"
rand = "~0.3.14"
serde = "1.0"
serde_derive = "1.0"
serde_json  = "1.0"
log = "0.4"
simple_logger = "1.0"
lambda_runtime = "0.1"