[package]
name = "comparator_playground"
version = "0.1.0"
authors = ["JoshFourie <42534669+JoshFourie@users.noreply.github.com>"]
edition = "2018"

[dependencies]
zksnark = { path = "master_lib/zksnark_rs" }
tiny-keccak = "1.0"
itertools = "0.6.0"
rand = "~0.3.14"
serde = "1.0"
serde_derive = "1.0"
serde_json  = "1.0"
log = "0.4"